<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".AccountCreateActivity">


    <TextView
        android:id="@+id/account_creation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/create_account"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/create_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_logo"
        app:layout_constraintVertical_bias="0.182" />

    <EditText
        android:id="@+id/create_number"
        android:layout_width="266dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="44dp"
        android:inputType="number"
        android:maxLength="10"
        android:selectAllOnFocus="true"
        android:text=""
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/create_button"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/create_name"
        android:layout_width="266dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPersonName"
        android:selectAllOnFocus="true"
        android:text=""
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/create_number"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/create_password"
        android:layout_width="266dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:text=""
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/create_name"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/email2"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_email"
        app:layout_constraintEnd_toStartOf="@+id/create_email"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/password2"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_password"
        app:layout_constraintEnd_toStartOf="@+id/create_password"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailText" />

    <TextView
        android:id="@+id/nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/full_name"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_name"
        app:layout_constraintEnd_toStartOf="@+id/create_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordText" />

    <TextView
        android:id="@+id/numberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/phone"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/create_number"
        app:layout_constraintEnd_toStartOf="@+id/create_number"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nameText" />

    <EditText
        android:id="@+id/create_email"
        android:layout_width="266dp"
        android:layout_height="38dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="16dp"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text=""
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/create_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="172dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="136dp"
        android:background="@color/colorWhite"
        android:enabled="true"
        android:text="@string/create"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/create_email_required"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/required_umd_edu_or_terpmail_umd_edu"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/create_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_creation"
        app:layout_constraintVertical_bias="0.655" />

    <ImageView
        android:id="@+id/create_umd_logo"
        android:layout_width="122dp"
        android:layout_height="84dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_button"
        app:srcCompat="@drawable/umd_logo" />

    <ImageView
        android:id="@+id/create_logo"
        android:layout_width="186dp"
        android:layout_height="143dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lost_and_found_icon" />


</androidx.constraintlayout.widget.ConstraintLayout>