<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    tools:context=".ResetPasswordActivity">

    <TextView
        android:id="@+id/pw_reset_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorBlack"
        android:text="@string/password_reset"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/pw_reset_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_main_icon"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/pw_reset_email"
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="24dp"
        android:hint="@string/please_enter_your_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toEndOf="@+id/reset_email_icon"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/pw_reset_button"
        android:layout_width="181dp"
        android:layout_height="31dp"
        android:layout_gravity="start"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="444dp"
        android:background="@color/colorWhite"
        android:enabled="true"
        android:text="@string/reset_password"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_reset_email"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/reset_email_icon"
        android:layout_width="26dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/pw_reset_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/pw_reset_email"
        app:layout_constraintVertical_bias="0.45"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <ImageView
        android:id="@+id/reset_main_icon"
        android:layout_width="115dp"
        android:layout_height="115dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_lock_lock" />

    <ImageView
        android:id="@+id/reset_umd_logo"
        android:layout_width="122dp"
        android:layout_height="84dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_reset_button"
        app:layout_constraintVertical_bias="0.83"
        app:srcCompat="@drawable/umd_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>